Implement `Maximum AFR` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4993,6 +4993,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Minimum TPS",	nitrousMinimumTps
 		field = "Minimum CLT",	nitrousMinimumClt
 		field = "Maximum MAP",	nitrousMaximumMap
+		field = "Maximum AFR",	nitrousMaximumAfr
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
