First test interrupt waking on firmware

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4237,9 +4237,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 ;			Engine->Battery & Alternator
 	dialog = batteryDialog, "Battery Settings",	yAxis
 		field = "vBatt ADC input",						vbattAdcChannel
-		field = "Ignition Key ADC input",               ignKeyAdcChannel@@if_ts_show_ign_key_analog_input
-		field = "Ignition Key Switch",                  ignitionKeyDigitalPin@@if_ts_show_ign_key_switch
-		field = "Ignition Key Switch Mode",             ignitionKeyDigitalPinMode@@if_ts_show_ign_key_switch
+		field = "Ignition Key ADC input",               ignKeyAdcChannel
+		field = "Ignition Key Switch",                  ignitionKeyDigitalPin
+		field = "Ignition Key Switch Mode",             ignitionKeyDigitalPinMode
 		field = "Battery Input Divider Coefficient",	vbattDividerCoeff
 	dialog = alternator, "Alternator Settings",	yAxis
 		field = "Enabled",								isAlternatorControlEnabled
@@ -4263,7 +4263,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = alternatorVoltageTargetTableTbl,	East
 
 	dialog = energySystems, "Battery and Alternator Settings",	yAxis
-		panel = batteryDialog@@if_ts_show_vbatt
+		panel = batteryDialog
 		panel = alternatorSettings
 
 	dialog = speedSensorAnalog, "Speed sensor"
