Customize standby time and reset stepper if ignition switched

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4241,6 +4241,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Ignition Key Switch",                  ignitionKeyDigitalPin
 		field = "Ignition Key Switch Mode",             ignitionKeyDigitalPinMode
 		field = "Battery Input Divider Coefficient",	vbattDividerCoeff
+		field = "Sleep Mode Timeout",					standbyTimeout
 	dialog = alternator, "Alternator Settings",	yAxis
 		field = "Enabled",								isAlternatorControlEnabled
 		field = "Control output",						alternatorControlPin, {isAlternatorControlEnabled == 1}
