Implement `Activation RPM`, `Deactivation RPM` and `Deactivation RPM Window` settings #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4990,10 +4990,13 @@ dialog = tcuControls, "Transmission Settings"
 		panel = NitrousControlLuaGaugeDialog,	{nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@}
 
 	dialog = NitrousControlSettings, "Settings"
-		field = "Minimum TPS",	nitrousMinimumTps
-		field = "Minimum CLT",	nitrousMinimumClt
-		field = "Maximum MAP",	nitrousMaximumMap
-		field = "Maximum AFR",	nitrousMaximumAfr
+		field = "Minimum TPS",				nitrousMinimumTps
+		field = "Minimum CLT",				nitrousMinimumClt
+		field = "Maximum MAP",				nitrousMaximumMap
+		field = "Maximum AFR",				nitrousMaximumAfr
+		field = "Activation RPM",			nitrousActivationRpm
+		field = "Dectivation RPM",			nitrousDeactivationRpm
+		field = "Dectivation RPM Window",	nitrousDeactivationRpmWindow
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
