--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5260,7 +5260,7 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = hpfpPumpDialog, "HPFP Pump Configuration"
 		field = "Valve Pin", hpfpValvePin, {hpfpCamLobes != 0}
 		field = "Valve Pin Mode", hpfpValvePinMode, {hpfpCamLobes != 0}
-		commandButton = "HPFP Valve", cmd_test_hpfp_valve
+		commandButton = "Bench Test HPFP Valve", cmd_test_hpfp_valve
 	field = "Valve peak current", mc33_hpfp_i_peak, {hpfpCamLobes != 0}
 	field = "Valve hold current", mc33_hpfp_i_hold, {hpfpCamLobes != 0}
 	field = "Valve hold off time", mc33_hpfp_i_hold_off, {hpfpCamLobes != 0}
