dfco timing retard and ramp back in

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5041,6 +5041,9 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Cut fuel below MAP",		coastingFuelCutMap, {coastingFuelCutEnabled}
 		field = "Fuel cut delay", dfcoDelay, {coastingFuelCutEnabled}
 		field = "Inhibit closed loop fuel after cut", noFuelTrimAfterDfcoTime, {coastingFuelCutEnabled}
+		field = ""
+		field = "Ignition retard during cut", dfcoRetardDeg, {coastingFuelCutEnabled}
+		field = "After cut timing ramp-in time", dfcoRetardRampInTime, {coastingFuelCutEnabled}
 
 	dialog = rotaryDialog, "Rotary"
 		field = "Enable Trailing Sparks", enableTrailingSparks
