Implement `Nitrous Relay` and `Nitrous Relay Mode` settings #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4990,6 +4990,8 @@ dialog = tcuControls, "Transmission Settings"
 		panel = NitrousControlLuaGaugeDialog,	{nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@}
 
 	dialog = NitrousControlSettings, "Settings"
+		field = "Nitrous Relay",			nitrousRelayPin
+		field = "Nitrous Relay Mode",		nitrousRelayPinMode
 		field = "Minimum TPS",				nitrousMinimumTps
 		field = "Minimum CLT",				nitrousMinimumClt
 		field = "Maximum MAP",				nitrousMaximumMap
