Convert `NitrousController` into engine module, handling slow callback #6783

--- a/firmware/integration/LiveData.yaml
+++ b/firmware/integration/LiveData.yaml
@@ -82,13 +82,6 @@ Usages:
     constexpr: "engine->shiftTorqueReductionController"
     conditional_compilation: "EFI_LAUNCH_CONTROL"
 
-  - name: nitrous_control_state
-    cppFileName: nitrous_controller
-    java: NitrousController.java
-    folder: controllers/algo
-    constexpr: "engine->nitrousController"
-    conditional_compilation: "EFI_LAUNCH_CONTROL"
-
   - name: antilag_system_state
     cppFileName: antilag_system
     java: AntilagSystem.java
@@ -111,6 +104,13 @@ Usages:
     prepend: integration/rusefi_config_shared.txt
     output_name: ac
     engineModule: AcController
+
+  - name: nitrous_control_state
+    java: NitrousControl.java
+    folder: controllers/algo
+    prepend: integration/rusefi_config_shared.txt
+    output_name: nitrous
+    engineModule: NitrousController
 
   - name: fan_control
     java: FanControl.java
