Implement `Fuel Adder %` settings #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4999,6 +4999,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Activation RPM",			nitrousActivationRpm
 		field = "Dectivation RPM",			nitrousDeactivationRpm
 		field = "Dectivation RPM Window",	nitrousDeactivationRpmWindow
+		field = "Fuel Adder",				nitrousFuelAdderPercent
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
