--- a/.github/workflows/build-firmware-windows.yaml
+++ b/.github/workflows/build-firmware-windows.yaml
@@ -13,6 +13,11 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
+          java-version: '11'
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
           java-version: '17'
 
       - uses: carlosperate/arm-none-eabi-gcc-action@v1
