--- a/.github/workflows/build-unit-tests-windows.yaml
+++ b/.github/workflows/build-unit-tests-windows.yaml
@@ -13,6 +13,11 @@ jobs:
     - uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
+        java-version: '11'
+
+    - uses: actions/setup-java@v4
+      with:
+        distribution: 'zulu'
         java-version: '17'
 
     - uses: actions/checkout@v4
