--- a/firmware/config/boards/nucleo_f767/meta-info-stm32f767_osc.env
+++ b/firmware/config/boards/nucleo_f767/meta-info-stm32f767_osc.env
@@ -3,4 +3,4 @@ PROJECT_CPU=ARCH_STM32F7
 USE_FATFS=no
 EXTRA_PARAMS=-DSTM32F767xx -DEFI_INJECTOR_PIN3=Gpio::Unassigned
 SKIP_RATE=100
-USE_OPENBLT=yes
+__USE_OPENBLT=yes
