--- a/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-A.yaml
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/connectors/gdi-A.yaml
@@ -164,10 +164,12 @@ pins:
   - pin: 26A
     function: Power GND
     type: gnd
+    color: black
 
   - pin: 27A
     function: Sensor GND
     type: agnd
+    color: black
 
   - pin: 28A
     function: 28A input
