Implement `Ignition Retard` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5000,6 +5000,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Dectivation RPM",			nitrousDeactivationRpm
 		field = "Dectivation RPM Window",	nitrousDeactivationRpmWindow
 		field = "Fuel Adder",				nitrousFuelAdderPercent
+		field = "Ignition Retard",			nitrousIgnitionRetard
 
 	dialog = NitrousControlSettingsDialog, "", yAxis
 		field = "Enable Nitrous Control",			nitrousControlEnabled
