Implement `Minimum Vehicle Speed` setting #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4991,6 +4991,7 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = NitrousControlSettings, "Settings"
 		field = "Nitrous Relay",			nitrousRelayPin
 		field = "Nitrous Relay Mode",		nitrousRelayPinMode
+		field = "Minimum Vehicle Speed",	nitrousMinimumVehicleSpeed
 		field = "Minimum TPS",				nitrousMinimumTps
 		field = "Minimum CLT",				nitrousMinimumClt
 		field = "Maximum MAP",				nitrousMaximumMap
