Fix `Nitrous Control` dialog #6783

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5007,7 +5007,7 @@ dialog = tcuControls, "Transmission Settings"
 		panel = NitrousControlArmingMethodDialog,	{nitrousControlEnabled == 1}
 		panel = NitrousControlSettings,				{nitrousControlEnabled == 1 && ((nitrousControlArmingMethod == @@nitrous_arming_method_e_DIGITAL_SWITCH_INPUT@@ && nitrousControlTriggerPin != 0) || (nitrousControlArmingMethod == @@nitrous_arming_method_e_LUA_GAUGE@@))}
 
-	dialog = NitrousControlDialog
+	dialog = NitrousControlDialog, "", border
 		panel = NitrousControlSettingsDialog, West
 		panel = nitrous_control_stateDialog, East
 
