--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-D.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-D.yaml
@@ -145,28 +145,28 @@ pins:
     function: VVT 3
     meta: MM176_OUT_PWM3
     class: outputs
-    ts_name: 20D - VVT 3
+    ts_name: ___ - VVT 3
     color: purple
 
   - pin: 21D
     function: VVT 4
     meta: MM176_OUT_PWM4
     class: outputs
-    ts_name: 21D - VVT 4
+    ts_name: ___ - VVT 4
     color: purple
 
   - pin: 22D
     function: Boost (low)
     meta: MM176_OUT_PWM5
     class: outputs
-    ts_name: 22C - Boost
+    ts_name: ___ - Boost
     color: purple
 
   - pin: 23D
     function: Low Side 2
     meta: MM176_OUT_PWM7
     class: outputs
-    ts_name: 23D - Low Side 2
+    ts_name: ___ - Low Side 2
 
   - pin: 24D
     meta: MM176_GP20
