--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -26,6 +26,7 @@ jobs:
             runs-on: hw-ci-f4-discovery
             # see HwCiF4Discovery.java or https://github.com/rusefi/rusefi/wiki/Dev-Quality-Control#stm32f407g-disc1 for wiring documentation
             test-suite: com.rusefi.HwCiF4Discovery
+            test-suite-ini: ../firmware/tunerstudio/generated/rusefi_stm32f767_nucleo.ini
             folder: config/boards/f407-discovery
             openocd-script: .github/workflows/openocd_ci_f4_discovery.cfg
             serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_2B003B000A51343033393930-if01
@@ -142,5 +143,5 @@ jobs:
     # This both compiles and runs HW CI tests
     # .github/workflows/hw-ci/run_hw_ci.sh com.rusefi.HwCiF4Discovery
     - name: Run Hardware CI
-      run: .github/workflows/hw-ci/run_hw_ci.sh ${{matrix.test-suite}}
+      run: .github/workflows/hw-ci/run_hw_ci.sh ${{matrix.test-suite}} ${{matrix.test-suite-ini}}
 
