--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         build-target: [f407-discovery
-#          ,
+#        nucleo_f767
           #proteus F7 HW CI is not 100% reliable #6002          proteus_f7,
         #  proteus_f4
         ]
@@ -26,6 +26,7 @@ jobs:
             runs-on: hw-ci-f4-discovery
             # see HwCiF4Discovery.java or https://github.com/rusefi/rusefi/wiki/Dev-Quality-Control#stm32f407g-disc1 for wiring documentation
             test-suite: com.rusefi.HwCiF4Discovery
+
             folder: config/boards/f407-discovery
             openocd-script: .github/workflows/openocd_ci_f4_discovery.cfg
             serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_2B003B000A51343033393930-if01
@@ -34,8 +35,8 @@ jobs:
 
 #          - build-target: nucleo_f767
 #            runs-on: hw-ci-nucleo-f7
-#            # see HwCiF4Discovery.java or https://github.com/rusefi/rusefi/wiki/Dev-Quality-Control#stm32f407g-disc1 for wiring documentation
 #            test-suite: com.rusefi.HwCiNucleoF7
+#            test-suite-ini: firmware/tunerstudio/generated/rusefi_stm32f767_nucleo.ini
 #            folder: config/boards/nucleo_f767
 #            openocd-script: .github/workflows/openocd_ci_proteus_f7.cfg
 
@@ -142,5 +143,5 @@ jobs:
     # This both compiles and runs HW CI tests
     # .github/workflows/hw-ci/run_hw_ci.sh com.rusefi.HwCiF4Discovery
     - name: Run Hardware CI
-      run: .github/workflows/hw-ci/run_hw_ci.sh ${{matrix.test-suite}}
+      run: .github/workflows/hw-ci/run_hw_ci.sh ${{matrix.test-suite}} ${{matrix.test-suite-ini}}
 
