--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -28,7 +28,6 @@ jobs:
             test-suite: com.rusefi.HwCiF4Discovery
 
             folder: config/boards/f407-discovery
-            openocd-script: .github/workflows/openocd_ci_f4_discovery.cfg
             serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_2B003B000A51343033393930-if01
             vbatt_supply: 12
             stlink-serial: H?u\x06geVQ2S\x08g
@@ -97,7 +96,7 @@ jobs:
         lsusb -vvv
 
     - name: Check for STLINK
-      run: lsusb | grep -i "st-\?link"
+      run: st-info --probe
 
 #    - name: Install tools
 #      run: |
@@ -124,15 +123,15 @@ jobs:
 
 # (cat .github/workflows/openocd_ci_f4_discovery.cfg ) | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
 # (cat .github/workflows/openocd_ci_proteus_f7.cfg ) | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
-    - name: OpenOCD wipe & flash STM32
-      run: |
-        if [ "$(hostname)" == "rusefi-hw-ci-2" ]; then
-          (cat ${{matrix.openocd-script}}; echo "hla_serial ${{matrix.stlink-serial}}") \
-          | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
-        else
-          (cat ${{matrix.openocd-script}} ) \
-          | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
-        fi
+    - name: st-flash wipe & flash STM32
+      run:
+      if [ "$(hostname)" == "rusefi-hw-ci-2" ]; then
+        st-flash --area=main erase
+        st-flash --format=binary --reset --connect-under-reset --serial=${{matrix.stlink-serial}} write firmware/deliver/rusefi.bin 0x08000000
+      else
+        st-flash --area=main erase
+        st-flash --format=binary --reset --connect-under-reset write firmware/deliver/rusefi.bin 0x08000000
+      fi
 
     - name: Upload build bin artifact
       uses: actions/upload-artifact@v4
