--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -30,7 +30,6 @@ jobs:
             folder: config/boards/f407-discovery
             serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_2B003B000A51343033393930-if01
             vbatt_supply: 12
-            stlink-serial: H?u\x06geVQ2S\x08g
 
 #          - build-target: nucleo_f767
 #            runs-on: hw-ci-nucleo-f7
@@ -48,7 +47,6 @@ jobs:
 #            openocd-script: .github/workflows/openocd_ci_proteus_f4.cfg
 #            serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_41003D000451383037343335-if01
 #            vbatt_supply: 12
-#            stlink-serial: 004D00323137511133333639
 
 #          - build-target: proteus_f7
 #            runs-on: hw-ci-proteus-f7
@@ -113,25 +111,17 @@ jobs:
     # ls -l /dev/serial/by-id/
     # we specify power supply voltage to share power supply between NUC and ECU under test
     # java automated test suite picks ECU based on specified serial
+#        echo "HARDWARE_CI_VBATT=${{matrix.vbatt_supply}}" >> $GITHUB_ENV
     - name: Set EXTRA env
       run: |
-        if [ "$(hostname)" == "rusefi-hw-ci-2" ]; then
-          echo "HARDWARE_CI_SERIAL_DEVICE=${{matrix.serial-device}}" >> $GITHUB_ENV
-          echo "HARDWARE_CI_VBATT=${{matrix.vbatt_supply}}" >> $GITHUB_ENV
-        fi
-
+        echo "Nothing"
 
 # (cat .github/workflows/openocd_ci_f4_discovery.cfg ) | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
 # (cat .github/workflows/openocd_ci_proteus_f7.cfg ) | .github/workflows/hw-ci/openocd_wipe_and_flash.sh
     - name: st-flash wipe & flash STM32
       run: |
-        if [ "$(hostname)" == "rusefi-hw-ci-2" ]; then
-            st-flash --area=main erase
-            st-flash --format=binary --reset --connect-under-reset --serial=${{matrix.stlink-serial}} write firmware/deliver/rusefi.bin 0x08000000
-        else
-            st-flash --area=main erase
-            st-flash --format=binary --reset --connect-under-reset write firmware/deliver/rusefi.bin 0x08000000
-        fi
+        st-flash --area=main erase
+        st-flash --format=binary --reset --connect-under-reset write firmware/deliver/rusefi.bin 0x08000000
 
     - name: Upload build bin artifact
       uses: actions/upload-artifact@v4
