--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -31,7 +31,9 @@ jobs:
             folder: config/boards/f407-discovery
             serial-device: /dev/serial/by-id/usb-rusEFI_LLC_rusEFI_Engine_Management_ECU_2B003B000A51343033393930-if01
             vbatt_supply: 12
-
+            # wiring:
+            # PD1 <=> PC6
+            # PD2 <=> PA6
           - build-target: nucleo_f767
             runs-on: hw-ci-nucleo-f7
             test-suite: com.rusefi.HwCiNucleoF7
