only:replacing etbTarget with live data

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1674,7 +1674,7 @@ gaugeCategory = Throttle Body (incl. ETB)
 	TPSGauge			= TPSValue,		"Throttle position",			"%",		0,	100,		0,		0,	100,	100,	1,	1
 	TPS2Gauge		= TPS2Value,	"Throttle position #2",			"%",		0,	100,		0,		0,	100,	100,	1,	1
 
-	etbTargetGauge	= etbTarget,	@@GAUGE_NAME_ETB_TARGET@@, "%",	0,	100,	0,	0,	100,	100,	1,	1
+	etbTargetGauge	= m_adjustedTarget0,	@@GAUGE_NAME_ETB_TARGET@@, "%",	0,	100,	0,	0,	100,	100,	1,	1
 	etbErrorGauge		= etbStatus_error,	@@GAUGE_NAME_ETB_ERROR@@,  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
 	tps1SplitGauge	= tps1Split,	"TPS1 Sensor Split",  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
 	tps2SplitGauge	= tps2Split,	"TPS2 Sensor Split",  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
