update yaml file

--- a/.github/workflows/custom-board-build/action.yaml
+++ b/.github/workflows/custom-board-build/action.yaml
@@ -8,18 +8,18 @@ inputs:
   rusefi_dir:
     description: 'Path to rusefi submodule'
     required: false
-    default: firmware/config/boards/microrusefi
+    default: ./config/boards/microrusefi
   meta_info:
     description: 'Path to meta info file'
     required: false
-    default: firmware/config/boards/microrusefi/meta-info-mre_f4.env
+    default: ./config/boards/microrusefi/meta-info-mre_f4.env
   meta_output:
     description: 'Path to meta output directory'
     required: false
-    default: ./generated/
+    default: ./config/boards/microrusefi/
   sim_output:
     required: false
-    default: ./generated/
+    default: ./config/boards/microrusefi/
   lts:
     description: 'LTS Build'
     required: false
