--- a/.github/workflows/build-microRusEFI.yaml
+++ b/.github/workflows/build-microRusEFI.yaml
@@ -3,10 +3,10 @@ name: Build microRusEFI Firmware
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
