--- a/.github/workflows/build-microRusEFI.yaml
+++ b/.github/workflows/build-microRusEFI.yaml
@@ -15,6 +15,11 @@ jobs:
     
 
     steps:
+      - name: Install mtools
+      run: sudo apt-get install mtools
+
+      - name: Install mingw-w64
+      run: sudo apt-get install mingw-w64
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
