--- a/.github/workflows/build-microRusEFI.yaml
+++ b/.github/workflows/build-microRusEFI.yaml
@@ -40,6 +40,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake
+          
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Clean Previous Builds
         working-directory: ./firmware
