--- a/.github/workflows/build-microRusEFI.yaml
+++ b/.github/workflows/build-microRusEFI.yaml
@@ -66,5 +66,4 @@ jobs:
             ./firmware/deliver/rusefi*.hex
             ./firmware/deliver/rusefi*.dfu
             ./firmware/deliver/rusefi*.ini
-            ./firmware/deliver/rusefi_mre_f4.ini
-
+            tunerstudio/generated/rusefi_mre_f4.ini
