diagnostic: TS indicator for failed analog inputs

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1911,6 +1911,7 @@ gaugeCategory = GPPWM Outputs
 
 	indicator = { wbo0_hasFault }, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, white, black, red, black
 	indicator = {injectorHwIssue}, "inj", "INJ", white, black, red, black@@if_ts_show_inj_diag
+	indicator =		{ isAnalogFailure },					"Analog Ok",	"Analog error",	white, black,	red,  black@@if_ts_show_analog_diag
 
 	; indicator = { isInjectionEnabled && fuelCutReason == 0 }, { Inj: bitStringValue(injModeList, currentInjectionMode) }, { Inj: bitStringValue(injModeList, currentInjectionMode) }, white, black, white, black
 	; indicator = { isIgnitionEnabled && sparkCutReason == 0 }, { Ign: bitStringValue(ignModeList, currentIgnitionMode) }, { Ign: bitStringValue(ignModeList, currentIgnitionMode) }, white, black, white, black
