Implement target AFR blend #7123

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -962,6 +962,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins = minimumOilPressureValues
 		gauge = OilPressGauge
 
+	curve = targetAfrBlend1Bias, "Target AFR blend 1 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = targetAfrBlends1_blendBins, targetAfrBlendParameter1
+		yBins = targetAfrBlends1_blendValues
 
 [TableEditor]
 	;		table_id,	map3d_id,	"title",		page
@@ -1155,6 +1161,13 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= boostClosedLoopBlends2_loadBins, TPSValue
 		zBins		= boostClosedLoopBlends2_table
 		gridOrient  = 250, 0, 340
+
+	table = targetAfrBlend1Table, targetAfrBlend1Map, "Target AFR blend 1", 1
+		xyLabels = "RPM", "TPS"
+		xBins		= targetAfrBlends1_rpmBins, RPMValue
+		yBins		= targetAfrBlends1_loadBins, TPSValue
+		zBins		= targetAfrBlends1_table
+		gridOrient	= 250, 0, 340
 
 	table = ignitionIatCorrTableTbl,  ignitionIatCorrTableMap,  "Ignition Intake Air Temp correction",	1
 		xyLabels = "Air Temp", "Ignition Load"
@@ -1975,6 +1988,11 @@ menuDialog = main
 #else
 		subMenu = afrTableTbl,				"Target AFR", 0, {isInjectionEnabled == 1}
 #endif
+
+		groupMenu = "Target AFR blend tables"
+		groupChildMenu = targetAfrBlend1Cfg,	"Target AFR 1 bias"
+		groupChildMenu = targetAfrBlend1Table,	"Target AFR 1 adder",	{ targetAfrBlends1_blendParameter != 0 }
+
 		subMenu = std_separator
 
 		subMenu = tChargeSettings,			"Charge temperature estimation", 0, {isInjectionEnabled == 1}@@if_ts_show_charge_estimation
@@ -2931,6 +2949,17 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Blend parameter", boostClosedLoopBlends2_blendParameter
 		field = "Y axis override (set Zero for no override)", boostClosedLoopBlends2_yAxisOverride, {boostClosedLoopBlends2_blendParameter}
 		panel = boostClosedLoopBlend2Bias, {boostClosedLoopBlends2_blendParameter}
+
+	dialog = targetAfrBlend1Cfg, "Target AFR blend 1 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the target AFR table. For example, a value of"
+		field = "#+10 in the table, with 50 as the current bias will result"
+		field = "#in +5.0 added to target AFR %."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", targetAfrBlends1_blendParameter
+		field = "Y axis override (set Zero for no override)", targetAfrBlends1_yAxisOverride, { targetAfrBlends1_blendParameter }
+		panel = targetAfrBlend1Bias, { targetAfrBlends1_blendParameter }
 
 	dialog = dwellSettings, "", yAxis
 		panel = dwellCorrection
