--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -969,6 +969,13 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins = targetAfrBlends1_blendBins, targetAfrBlendParameter1
 		yBins = targetAfrBlends1_blendValues
 
+	curve = targetAfrBlend2Bias, "Target AFR blend 2 bias"
+		columnLabel = "param", "bias"
+		xAxis = 0, 100, 11
+		yAxis = 0, 100, 5
+		xBins = targetAfrBlends2_blendBins, targetAfrBlendParameter2
+		yBins = targetAfrBlends2_blendValues
+
 [TableEditor]
 	;		table_id,	map3d_id,	"title",		page
 @@BOARD_TABLES_FROM_FILE@@
@@ -1167,6 +1174,13 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins		= targetAfrBlends1_rpmBins, RPMValue
 		yBins		= targetAfrBlends1_loadBins, TPSValue
 		zBins		= targetAfrBlends1_table
+		gridOrient	= 250, 0, 340
+
+	table = targetAfrBlend1Table, targetAfrBlend1Map, "Target AFR blend 2", 1
+		xyLabels = "RPM", "TPS"
+		xBins		= targetAfrBlends2_rpmBins, RPMValue
+		yBins		= targetAfrBlends2_loadBins, TPSValue
+		zBins		= targetAfrBlends2_table
 		gridOrient	= 250, 0, 340
 
 	table = ignitionIatCorrTableTbl,  ignitionIatCorrTableMap,  "Ignition Intake Air Temp correction",	1
@@ -1992,6 +2006,8 @@ menuDialog = main
 		groupMenu = "Target AFR blend tables"
 		groupChildMenu = targetAfrBlend1Cfg,	"Target AFR 1 bias"
 		groupChildMenu = targetAfrBlend1Table,	"Target AFR 1 adder",	{ targetAfrBlends1_blendParameter != 0 }
+		groupChildMenu = targetAfrBlend2Cfg,	"Target AFR 2 bias"
+		groupChildMenu = targetAfrBlend2Table,	"Target AFR 2 adder",	{ targetAfrBlends2_blendParameter != 0 }
 
 		subMenu = std_separator
 
@@ -2960,6 +2976,17 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Blend parameter", targetAfrBlends1_blendParameter
 		field = "Y axis override (set Zero for no override)", targetAfrBlends1_yAxisOverride, { targetAfrBlends1_blendParameter }
 		panel = targetAfrBlend1Bias, { targetAfrBlends1_blendParameter }
+
+	dialog = targetAfrBlend2Cfg, "Target AFR blend 2 config"
+		field = "#The bias table controls how much of the blend table"
+		field = "#is mixed in to the target AFR table. For example, a value of"
+		field = "#+10 in the table, with 50 as the current bias will result"
+		field = "#in +5.0 added to target AFR %."
+		field = "#The X axis of the bias table is controlled by the selected blend"
+		field = "#parameter below."
+		field = "Blend parameter", targetAfrBlends2_blendParameter
+		field = "Y axis override (set Zero for no override)", targetAfrBlends2_yAxisOverride, { targetAfrBlends2_blendParameter }
+		panel = targetAfrBlend2Bias, { targetAfrBlends2_blendParameter }
 
 	dialog = dwellSettings, "", yAxis
 		panel = dwellCorrection
