Add `Clutch Down Switch` option to`Activation Mode` combobox on `Shift Torque Reduction (Flat Shift)` dialog (closes #7117)

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5005,10 +5005,16 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Launch Button Inverted",	launchActivateInverted,	{launchActivatePin != 0}
 		field = "Launch Button Mode",		launchActivatePinMode,	{launchActivatePin != 0}
 
+	dialog = ClutchDownDialog, "Clutch Down"
+		field = "Clutch Down",			clutchDownPin
+		field = "Clutch Down Inverted",	clutchDownPinInverted,	{clutchDownPin != 0}
+		field = "Clutch Down Mode",		clutchDownPinMode,		{clutchDownPin != 0}
+
 	dialog = TorqueReductionActivationModeDialog, "Activation", yAxis
 		field = "Activation Mode",	torqueReductionActivationMode
 		panel = TorqueReductionButtonDialog,	{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@}
 		panel = LaunchButtonDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@}
+		panel = ClutchDownDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@}
 
 	dialog = TorqueReductionSettings, "Settings"
 	    field = "Limit Torque Reduction Time",		limitTorqueReductionTime
@@ -5021,7 +5027,7 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = ShiftTorqueReductionSettingsDialog, "", yAxis
 		field = "Enable Shift Torque Reduction",		torqueReductionEnabled
 		panel = TorqueReductionActivationModeDialog,	{torqueReductionEnabled == 1}
-		panel = TorqueReductionSettings,				{torqueReductionEnabled == 1 && ((torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@ && launchActivatePin != 0))}
+		panel = TorqueReductionSettings,				{torqueReductionEnabled == 1 && ((torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@ && launchActivatePin != 0) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@))}
 
 	dialog = ShiftTorqueReductionDialog, "", border
 		panel = ShiftTorqueReductionSettingsDialog, West
