--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3221,6 +3221,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = fuelLevelDialog,				"Fuel Level Sensor"
 		field = "Input channel",						fuelLevelSensor
+;		field = "Filter Alpha", fuelLevelAveragingAlpha
 		panel = fuelLevelCurve
 
 ;
